# firstlight

./: .dockerignore  .env.example  .gitignore  AUDIT_ADDENDUM.md  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  FIXES.md  GUIDELINES.md  IMPLEMENTATION_SPECS.md  OPENSPEC.md  OPENSPEC_PRODUCTION.md  PARALLEL_ORCHESTRATOR_GUIDE.md  PROJECT_STATUS.md  QA_RENAME_ANALYSIS.md  QA_REPORT.md  README.md  REQUIREMENTS_ANALYSIS.md  ROADMAP.md  TASK_R2.4.1_COMPLETION_SUMMARY.md  VIS-1.2_REQUEST_3_COMPLETION_SUMMARY.md  VIS-1.3_COMPLETION_SUMMARY.md  VIS-1.5_COMPLETION_SUMMARY.md  WORK_ASSIGNMENTS.md  docker-compose.dev.yml  docker-compose.minimal.yml  docker-compose.yml  monitor_orchestrator.sh  monitor_parallel.sh  orchestrator.sh  parallel_orchestrator.sh  playwright.config.py  pyproject.toml  run_campfire_analysis.py  run_real_analysis.py  run_tests.py  scheduled_orchestrator.sh  test_before_after_complete.py  test_e2e_workflow.py  test_vis13_smoke.py  (+1 more)
.github/workflows/: deploy-production.yml  deploy-staging.yml  docker-push.yml
agents/: base.py
agents/discovery/: __init__.py  acquisition.py  catalog.py  main.py  selection.py
agents/orchestrator/: __init__.py  assembly.py  delegation.py  main.py  state.py  state_model.py
agents/pipeline/: main.py
agents/quality/: __init__.py  main.py  reporting.py  review.py  validation.py
agents/reporting/: __init__.py  delivery.py  main.py  products.py
api/: __init__.py  auth.py  config.py  cors.py  database.py  dependencies.py  jwt_handler.py  main.py  middleware.py  notifications.py  rate_limit.py  webhooks.py
api/models/: __init__.py  context.py  control.py  database.py  errors.py  internal.py  requests.py  responses.py
api/routes/: __init__.py  catalog.py  events.py  health.py  products.py  status.py
cli/: __init__.py  main.py
cli/commands/: __init__.py  analyze.py  discover.py  export.py  ingest.py  resume.py  run.py  status.py  validate.py
config/: ingestion.yaml
core/analysis/: __init__.py
core/context/: __init__.py  models.py  repository.py  stubs.py
core/data/: broker.py
core/events/: __init__.py  cloudevents.py
core/execution/: __init__.py  profiles.py  state.py
core/intent/: classifier.py  registry.py  resolver.py
core/ogc/: __init__.py  config.py
core/reporting/: __init__.py
core/resilience/: __init__.py
core/stac/: __init__.py  collections.py  mount.py  publisher.py
db/: init.sql
db/migrations/: 000_add_customer_id.sql  001_control_plane_schema.sql  002_job_events_notify.sql  006_pgstac_init.sql  (+4 more)
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
docs/: GEOSPATIAL_ANALYST_ASSESSMENT.md  IMAGE_VALIDATION_SUMMARY.md  IMAGE_VALIDATION_WORKFLOW.md  OPENSPEC_ARCHIVE.md  PRODUCTION_IMAGE_VALIDATION_REQUIREMENTS.md  R2.2.1_COMPLETION_SUMMARY.md  SENTINEL2_INGESTION_BUG_REPORT.md  TRACK_B_ROADMAP.md  branch-triage-llm-control-plane.md  patterns.md  product-analysis-2026-03-17.md
examples/: datasource_sentinel1.yaml  emergency_resources_demo.py  flood_event.yaml  generate_executive_summary.py  generate_pdf_report.py  pipeline_flood_sar.yaml  storm_event.yaml  vis_before_after_demo.py  wildfire_event.yaml
florida_wildfire_test/: .gitignore  README.md
notebooks/: demo_control_plane.ipynb
openspec/: project.md  validator.py
scripts/: agent_demo.py  build-images.sh  check-env.sh  claude_agent_demo.py  demo_control_plane.py  demo_lakehouse.py  hurricane_ian_full_reporting.py  hurricane_ian_qa_report.py  push-images.sh  smoke_phase4a.py
tests/: conftest.py  test_algorithm_registry.py  test_algorithms.py  test_api.py  test_assembly.py  test_cli.py  test_data_providers.py  test_deployment_smoke.py  test_docker_builds.py  test_docker_compose.py  test_emergency_resources.py  test_enrichment.py  test_examples.py  test_flood_algorithms.py  test_full_report_templates.py  test_intent.py  test_intent_edge_cases.py  test_interactive_reports.py  test_k8s_manifests.py  test_multiband_ingestion.py  test_normalization.py  test_quality.py  test_quality_uncertainty.py  test_quality_validation.py  test_reporting_data_integration.py  test_resilience.py  test_sanity.py  test_schemas.py  test_sedona_execution.py  test_stac_href_selection.py  test_storm_algorithms.py  test_templates.py  test_tiling.py  test_validation.py  test_validator.py
workers/: __init__.py  taskiq_app.py
(+303 files in other folders)
